--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "datasets>=3.5.0",
+    "tensorboard>=2.19.0",
     "torch>=2.7.0",
     "transformers>=4.51.3",
 ]
